@@ -38,6 +38,10 @@
 <p>2018-02-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/cut.c (ReadCUTImage): Fix DestroyImageInfo() of NULL
+pointer leading to assertion.  Fixes oss-fuzz issue 6067
+&quot;graphicsmagick/coder_CUT_fuzzer: Unknown signal in
+DestroyImageInfo&quot;.</li>
 <li>coders/tga.c (ReadTGAImage): Throw exception rather than
 assertion for unexpected comment size.  Fixes oss-fuzz issue 5961
 &quot;graphicsmagick/coder_ICB_fuzzer: ASSERT: (size_t)
